# NanoBreathControllerUSBDriver

./: .gitignore  CMakeLists.txt  ExponentialMovingAverage.cpp  ExponentialMovingAverage.h  NanoEventFilter.cpp  NanoEventFilter.h  README.md  SliderEventFilter.cpp  SliderEventFilter.h  driverwindow.cpp  driverwindow.h  driverwindow.ui  en_US.ts  ja_JP.ts  main.cpp  resource.qrc  zh_CN.ts
EventFilter/: LineEditClickOutsideFilter.cpp  LineEditClickOutsideFilter.h  LineEditMouseButtonDblClickFilter.cpp  LineEditMouseButtonDblClickFilter.h  SliderCtrlLeftClickFilter.cpp  SliderCtrlLeftClickFilter.h
Inc/: ExponentialMovingAverage.h  ExponentialMovingAverageFilter.h  driverwindow.h
Resource/: cc_index_to_text.json  resource.qrc
Resource/Translations/: en_US.ts  ja_JP.qm  ja_JP.ts  zh_CN.qm  zh_CN.ts
Src/: ExponentialMovingAverage.cpp  ExponentialMovingAverageFilter.cpp  NanoEventFilter.cpp  driverwindow.cpp  main.cpp
Validator/: LineEditValidator.cpp  LineEditValidator.h
